--- a/oktober1/5.html
+++ b/oktober1/5.html
@@ -1,113 +1,1 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Link Shopee Pagination</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 15px; max-width: 700px; margin-left:auto; margin-right:auto; }
-  .link-item { margin: 5px 0; }
-  button { margin: 5px; padding: 6px 12px; font-size: 14px; cursor: pointer; border-radius: 6px; border: 1px solid #ccc; }
-  button:hover { background: #f0f0f0; }
-  .hidden { display: none; }
-  .controls { margin-bottom: 15px; }
-</style>
-</head>
-<body>
-
-<h2>Link Shopee Pagination</h2>
-
-<div class="controls">
-  <button id="toggleBtn">Sembunyikan Link</button>
-  <button id="copyBtn">Copy Semua Link</button>
-</div>
-
-<div id="output"></div>
-
-<div style="margin-top:20px;">
-  <button id="prevBtn">⬅️ Sebelumnya</button>
-  <span id="pageInfo"></span>
-  <button id="nextBtn">➡️ Berikutnya</button>
-</div>
-
-<script>
-  // === DATA LINK ===
-  const links = [
-    "https://shopee.co.id/product/857038042/23103405684",
-    "https://shopee.co.id/product/857038042/23103405685",
-    "https://shopee.co.id/product/857038042/23103405686",
-    "https://shopee.co.id/product/857038042/23103405687",
-    "https://shopee.co.id/product/857038042/23103405688",
-    "https://shopee.co.id/product/857038042/23103405689",
-    "https://shopee.co.id/product/857038042/23103405690",
-    "https://shopee.co.id/product/857038042/23103405691",
-    "https://shopee.co.id/product/857038042/23103405692",
-    "https://shopee.co.id/product/857038042/23103405693",
-    "https://shopee.co.id/product/857038042/23103405694",
-    "https://shopee.co.id/product/857038042/23103405695"
-  ];
-
-  // === PENGATURAN PAGINATION ===
-  const perPage = 5;
-  let currentPage = parseInt(localStorage.getItem("currentPage")) || 1;
-
-  const output = document.getElementById("output");
-  const pageInfo = document.getElementById("pageInfo");
-
-  function renderPage() {
-    output.innerHTML = "";
-    const start = (currentPage - 1) * perPage;
-    const end = start + perPage;
-    const pageLinks = links.slice(start, end);
-
-    pageLinks.forEach((link, i) => {
-      const div = document.createElement("div");
-      div.className = "link-item";
-      div.innerHTML = `<a href="${link}" target="_blank">${link}</a>`;
-      output.appendChild(div);
-    });
-
-    pageInfo.textContent = `Halaman ${currentPage} dari ${Math.ceil(links.length / perPage)}`;
-
-    // Simpan posisi halaman ke localStorage
-    localStorage.setItem("currentPage", currentPage);
-  }
-
-  // === NAVIGASI HALAMAN ===
-  document.getElementById("prevBtn").addEventListener("click", () => {
-    if (currentPage > 1) {
-      currentPage--;
-      renderPage();
-    }
-  });
-
-  document.getElementById("nextBtn").addEventListener("click", () => {
-    if (currentPage < Math.ceil(links.length / perPage)) {
-      currentPage++;
-      renderPage();
-    }
-  });
-
-  // === SEMBUNYIKAN/TAMPILKAN LINK ===
-  let hidden = false;
-  document.getElementById("toggleBtn").addEventListener("click", () => {
-    hidden = !hidden;
-    document.querySelectorAll(".link-item").forEach(div => {
-      div.classList.toggle("hidden", hidden);
-    });
-    document.getElementById("toggleBtn").textContent = hidden ? "Tampilkan Link" : "Sembunyikan Link";
-  });
-
-  // === COPY SEMUA LINK TANPA TERPENGARUH TOMBOL SEMBUNYI ===
-  document.getElementById("copyBtn").addEventListener("click", () => {
-    navigator.clipboard.writeText(links.join("\n")).then(() => {
-      alert("Semua link berhasil disalin!");
-    });
-  });
-
-  // === RENDER PERTAMA ===
-  renderPage();
-</script>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="id"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Link Shopee Pagination</title> <style> body { font-family: Arial, sans-serif; margin: 15px; max-width: 700px; margin-left:auto; margin-right:auto; } h2,h3 { font-size: 1.2rem; margin-bottom: 8px; } textarea { width:100%; height:150px; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; } #output { margin-top:10px; } #output a { display:block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; } #output a:hover { text-decoration:underline; } .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; } .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; } .page-btn:hover { background-color:#ffd42a; color:#b36b00; } .active { font-weight:bold; background-color:#ffd42a; color:#b36b00; border-color:#b36b00; } #copyBtn { margin-top:12px; padding:12px; font-size:1rem; cursor:pointer; border:none; background-color:#ffd42a; color:#b36b00; border-radius:6px; width:100%; } #copyBtn:hover { background-color:#e6c72b; } .input-buttons { display:flex; gap:8px; margin-top:6px; flex-wrap:wrap; } .input-buttons button { flex:1; padding:10px; font-size:0.95rem; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:#f5f5f5; } .input-buttons button:hover { background:#eee; } #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; } .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; } #tokoContainer { margin-top:10px; } #toggleOutputBtn { width:100%;padding:10px;margin-top:10px;margin-bottom:10px;border:none;border-radius:6px;background:#ffd42a;color:#b36b00;cursor:pointer;font-weight:bold; } #toggleOutputBtn:hover { background:#e6c72b; } @media (max-width:480px){ h2,h3{ font-size:1rem; } textarea{ height:120px; font-size:0.9rem; } #output{ font-size:0.85rem; } .page-btn{ padding:8px 12px; font-size:0.9rem; } #copyBtn{ font-size:0.95rem; } .input-buttons{ flex-direction:column; } .input-buttons button{ flex:unset; width:100%; } } </style> </head> <body> <h2>Masukkan Link Shopee</h2> <textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee, satu per baris..."></textarea> <div class="input-buttons"> <button id="ambilLinksBtn">Ambil dari lima.txt</button> <button id="clearInputLinksBtn">Clear Input Links</button> <button id="copyInputLinksBtn">Copy Input Links</button> </div> <div class="sponsor"> Disponsori oleh <strong>Kios Tembakau MadGazan</strong> </div> <!-- Tombol untuk tampil/sembunyi toko --> <button id="toggleTokoBtn" style="width:100%;padding:10px;margin-bottom:10px;border:none;border-radius:6px;background:#ffd42a;color:#b36b00;cursor:pointer;font-weight:bold;"> 🔽 Sembunyikan ID Toko </button> <!-- Container toko --> <div id="tokoContainer"> <h3>Masukkan ID Toko yang Dikecualikan (satu per baris)</h3> <textarea id="excludedShops" placeholder="Contoh: 123456789&#10;987654321"></textarea> <div class="input-buttons"> <button id="ambilTokoBtn">Ambil dari data_toko.txt</button> <button id="clearInputTokoBtn">Clear Input Toko</button> <button id="copyInputTokoBtn">Copy Input Toko</button> </div> </div> <div id="stats"></div> <h3>Output (maks 100 per halaman)</h3> <!-- Tombol tampil/sembunyi output --> <button id="toggleOutputBtn">🔽 Sembunyikan Output Link</button> <div id="output"></div> <button id="copyBtn" onclick="copyToClipboard()">Copy Link di Halaman Ini</button> <div class="pagination" id="pagination"></div> <script> let allLinks=[], currentPage=1, maxPerPage=100; const inputLinksEl=document.getElementById('inputLinks'); const excludedShopsEl=document.getElementById('excludedShops'); const tokoContainer=document.getElementById('tokoContainer'); const toggleTokoBtn=document.getElementById('toggleTokoBtn'); const toggleOutputBtn=document.getElementById('toggleOutputBtn'); const outputDiv=document.getElementById('output'); const pageKey=location.pathname.split('/').pop().replace(/\.[^/.]+$/,''); // Tombol tampil/sembunyi toko toggleTokoBtn.addEventListener('click',()=>{ if(tokoContainer.style.display==='none'){ tokoContainer.style.display='block'; toggleTokoBtn.innerHTML='🔽 Sembunyikan ID Toko'; }else{ tokoContainer.style.display='none'; toggleTokoBtn.innerHTML='▶️ Tampilkan ID Toko'; } }); // Tombol tampil/sembunyi output toggleOutputBtn.addEventListener('click',()=>{ if(outputDiv.style.display==='none'){ outputDiv.style.display='block'; toggleOutputBtn.innerHTML='🔽 Sembunyikan Output Link'; }else{ outputDiv.style.display='none'; toggleOutputBtn.innerHTML='▶️ Tampilkan Output Link'; } }); window.onload=()=>{ if(localStorage.getItem(${pageKey}_inputLinks)) inputLinksEl.value=localStorage.getItem(${pageKey}_inputLinks); if(localStorage.getItem(${pageKey}_excludedShops)) excludedShopsEl.value=localStorage.getItem(${pageKey}_excludedShops); processLinks(); } // Ambil lima.txt document.getElementById('ambilLinksBtn').addEventListener('click',async ()=>{ try{ const res=await fetch('lima.txt?t='+Date.now(),{cache:'no-store'}); if(!res.ok) throw new Error('HTTP '+res.status); const text=await res.text(); const rows=text.split(/\r?\n/).map(r=>r.trim()).filter(Boolean); inputLinksEl.value=rows.join("\n"); localStorage.setItem(${pageKey}_inputLinks,inputLinksEl.value); processLinks(); }catch(e){alert("Gagal mengambil lima.txt: "+e.message);} }); // Ambil data_toko.txt document.getElementById('ambilTokoBtn').addEventListener('click',async ()=>{ try{ const res=await fetch('data_toko.txt?t='+Date.now(),{cache:'no-store'}); if(!res.ok) throw new Error('HTTP '+res.status); const text=await res.text(); const rows=text.split(/\r?\n/).map(r=>r.trim()).filter(Boolean); excludedShopsEl.value=rows.join("\n"); localStorage.setItem(${pageKey}_excludedShops,excludedShopsEl.value); processLinks(); }catch(e){alert("Gagal mengambil data_toko.txt: "+e.message);} }); // Clear/copy links document.getElementById('clearInputLinksBtn').addEventListener('click',()=>{ inputLinksEl.value=''; localStorage.removeItem(${pageKey}_inputLinks); processLinks(); }); document.getElementById('copyInputLinksBtn').addEventListener('click',()=>{ const text=inputLinksEl.value.trim(); if(!text){alert("Input kosong!"); return;} navigator.clipboard.writeText(text).then(()=>alert("Isi input berhasil disalin!")).catch(()=>alert("Gagal menyalin!")); }); // Clear/copy toko document.getElementById('clearInputTokoBtn').addEventListener('click',()=>{ excludedShopsEl.value=''; localStorage.removeItem(${pageKey}_excludedShops); processLinks(); }); document.getElementById('copyInputTokoBtn').addEventListener('click',()=>{ const text=excludedShopsEl.value.trim(); if(!text){alert("Input kosong!"); return;} navigator.clipboard.writeText(text).then(()=>alert("Isi input berhasil disalin!")).catch(()=>alert("Gagal menyalin!")); }); // Simpan input ke localStorage saat diketik inputLinksEl.addEventListener('input',()=>{ localStorage.setItem(${pageKey}_inputLinks,inputLinksEl.value); processLinks(); }); excludedShopsEl.addEventListener('input',()=>{ localStorage.setItem(${pageKey}_excludedShops,excludedShopsEl.value); processLinks(); }); // Fungsi utama function processLinks(){ const rawLines=inputLinksEl.value.split('\n').map(l=>l.trim()); const excludedShopIds=excludedShopsEl.value.split('\n').map(id=>id.trim()).filter(Boolean); let pages=[], currentLinks=[]; for(let i=0;i<rawLines.length;i++){ const line=rawLines[i]; if(line==='' || line==='###'){ // pemisah halaman if(currentLinks.length>0){ pages.push(currentLinks); currentLinks=[]; } }else if(/\/product\/\d+\/\d+/.test(line)){ const match=line.match(/\/product\/(\d+)\/\d+/); const shopId=match[1]; if(!excludedShopIds.includes(shopId)) currentLinks.push(line); if(currentLinks.length>=maxPerPage){ pages.push(currentLinks); currentLinks=[]; } } } if(currentLinks.length>0) pages.push(currentLinks); allLinks=pages; currentPage=1; showPage(currentPage); renderPagination(); const totalLinks=rawLines.filter(l=>l && l!=='###').length; document.getElementById('stats').textContent=Total link diinput: ${totalLinks}\nTotal halaman: ${allLinks.length}; outputDiv.style.display=allLinks.length?'block':'none'; } function showPage(page){ if(page<1||page>allLinks.length) return; const pageLinks=allLinks[page-1]; outputDiv.innerHTML=pageLinks.map(l=><a href="${l}" target="_blank" rel="noopener noreferrer">${l}</a>).join(''); currentPage=page; highlightActivePage(); } function copyToClipboard(){ if(!allLinks.length) return; const text=allLinks[currentPage-1].join('\n'); navigator.clipboard.writeText(text).then(()=>alert(Link di halaman ${currentPage} berhasil disalin!)).catch(()=>alert('Gagal menyalin!')); } function renderPagination(){ const pagination=document.getElementById('pagination'); pagination.innerHTML=''; for(let i=1;i<=allLinks.length;i++){ const btn=document.createElement('button'); btn.textContent=i; btn.className='page-btn'; if(i===currentPage) btn.classList.add('active'); btn.addEventListener('click',()=>showPage(i)); pagination.appendChild(btn); } } function highlightActivePage(){ document.querySelectorAll('.page-btn').forEach(btn=>{ btn.classList.remove('active'); if(parseInt(btn.textContent)===currentPage) btn.classList.add('active'); }); } </script> </body> </html>
