--- a/oktober1/indexoto.html
+++ b/oktober1/indexoto.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Daftar Link Klikabel</title>
   <style>
-    :root{
+    :root {
       --bg: #f7f7f9;
       --card: #ffffff;
       --accent: #1f8dd6;
@@ -13,117 +13,106 @@
       --radius: 12px;
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
-    body{
-      margin:0;
-      padding:20px;
-      background:linear-gradient(180deg, var(--bg), #eef2f7 140%);
-      color:#111827;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
+    body {
+      margin: 0;
+      padding: 20px;
+      background: linear-gradient(180deg, var(--bg), #eef2f7 140%);
+      color: #111827;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
-    .container{
-      max-width:800px;
-      margin:0 auto;
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
     }
-
-    header{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      margin-bottom:18px;
+    header {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin-bottom: 18px;
     }
-    h1{
-      font-size:20px;
-      margin:0;
-    }
-    p.lead{
-      margin:6px 0 18px 0;
-      color:var(--muted);
-      font-size:14px;
+    h1 { font-size: 20px; margin: 0; }
+    p.lead {
+      margin: 6px 0 18px 0;
+      color: var(--muted);
+      font-size: 14px;
     }
 
-    .card{
-      background:var(--card);
-      border-radius:var(--radius);
-      padding:14px;
-      box-shadow:0 6px 18px rgba(15,23,42,0.06);
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      padding: 14px;
+      box-shadow: 0 6px 18px rgba(15, 23, 42, 0.06);
     }
+    .list {
+      display: grid;
+      gap: 10px;
+    }
+    .item {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      padding: 10px;
+      border-radius: 10px;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0));
+      flex-wrap: wrap;
+    }
+    .link-box { flex: 1 1 auto; min-width: 0; overflow: hidden; }
+    a.link {
+      display: block;
+      font-weight: 600;
+      color: var(--accent);
+      text-decoration: none;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .small {
+      display: block;
+      color: var(--muted);
+      font-size: 13px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+    .controls {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      flex: 0 0 auto;
+    }
+    button {
+      border: 0;
+      padding: 8px 10px;
+      border-radius: 8px;
+      font-size: 13px;
+      cursor: pointer;
+      background: #efefef;
+    }
+    button.primary { background: var(--accent); color: white; font-weight: 600; }
+    button.ghost { background: transparent; border: 1px solid #e6e6e6; }
 
-    .list{
-      display:grid;
-      gap:10px;
+    .form-box {
+      margin-bottom: 14px;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: var(--radius);
+      background: #fafafa;
     }
+    .form-box input {
+      width: 100%;
+      margin-bottom: 8px;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+    .form-box button { width: 100%; }
 
-    .item{
-      display:flex;
-      gap:10px;
-      align-items:center;
-      padding:10px;
-      border-radius:10px;
-      background:linear-gradient(180deg, rgba(0,0,0,0.01), rgba(0,0,0,0.00));
-      flex-wrap:wrap;
-    }
-
-    .link-box{
-      flex:1 1 auto;
-      min-width:0;
-      overflow:hidden;
-    }
-
-    a.link{
-      display:block;
-      font-weight:600;
-      color:var(--accent);
-      text-decoration:none;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-    .small{
-      display:block;
-      color:var(--muted);
-      font-size:13px;
-      overflow:hidden;
-      white-space:nowrap;
-      text-overflow:ellipsis;
-    }
-
-    .controls{
-      display:flex;
-      gap:8px;
-      align-items:center;
-      flex:0 0 auto;
-    }
-
-    button{
-      border:0;
-      padding:8px 10px;
-      border-radius:8px;
-      font-size:13px;
-      cursor:pointer;
-      background:#efefef;
-    }
-    button.primary{
-      background:var(--accent);
-      color:white;
-      font-weight:600;
-    }
-    button.ghost{
-      background:transparent;
-      border:1px solid #e6e6e6;
-    }
-
-    .top-actions{
-      display:flex;
-      gap:8px;
-      justify-content:flex-end;
-      margin-bottom:12px;
-    }
-
-    @media (max-width:520px){
-      header{ flex-direction:column; align-items:flex-start; gap:6px; }
-      .controls{ width:100%; justify-content:flex-start; gap:6px; }
-      .item{ padding:12px; }
+    @media (max-width: 520px) {
+      header { flex-direction: column; align-items: flex-start; gap: 6px; }
+      .controls { width: 100%; justify-content: flex-start; gap: 6px; }
+      .item { padding: 12px; }
     }
   </style>
 </head>
@@ -131,117 +120,114 @@
   <div class="container">
     <header>
       <div>
-        <h1>Daftar Link Otomatis</h1>
-        <p class="lead">Klik untuk buka, atau gunakan tombol salin untuk menyalin link.</p>
+        <h1>Daftar Link 21 22 dst</h1>
+        <p class="lead">Tambah link baru langsung dari halaman dan otomatis tersimpan.</p>
       </div>
     </header>
 
     <div class="card">
-      <div class="top-actions">
-        <button id="openAll" class="primary">Buka Semua</button>
-        <button id="copyAll" class="ghost">Salin Semua</button>
+      <div class="form-box">
+        <input type="text" id="nama" placeholder="Nama Toko (contoh: Jalbizki)" />
+        <input type="text" id="hp" placeholder="Keterangan HP (contoh: HP 1 Jalbizki)" />
+        <input type="url" id="url" placeholder="URL (contoh: https://...)" />
+        <button id="tambahBtn" class="primary">Tambah Link</button>
       </div>
 
       <div id="linkList" class="list"></div>
     </div>
 
     <p style="margin-top:10px;color:var(--muted);font-size:13px;">
-      Tips: tombol "Buka" membuka link di tab baru. Jika browser memblokir banyak tab, gunakan "Buka Semua" dengan hati-hati.
+      Data tersimpan otomatis di browser (localStorage).
     </p>
   </div>
 
   <script>
-    // === DATA LINK OTOMATIS ===
-    const linksData = [
+    const linkList = document.getElementById('linkList');
+    const tambahBtn = document.getElementById('tambahBtn');
+
+    // Ambil data awal dari localStorage
+    let dataLink = JSON.parse(localStorage.getItem('dataLink')) || [
       { nama: "Jalbizki", hp: "HP 1 Jalbizki", url: "https://niddumulu.github.io/shope-tools/oktober1/1.html" },
       { nama: "ranosadewa", hp: "HP 2 ranosadewa", url: "https://niddumulu.github.io/shope-tools/oktober1/2.html" },
       { nama: "kakfitro", hp: "HP 3 kakfitro", url: "https://niddumulu.github.io/shope-tools/oktober1/3.html" },
       { nama: "rinimuk", hp: "HP 4 rinimuk", url: "https://niddumulu.github.io/shope-tools/oktober1/4.html" },
-      { nama: "nurbadstore", hp: "HP 5 nurbadstore", url: "https://niddumulu.github.io/shope-tools/oktober1/5.html" },
-      { nama: "tokotujuh", hp: "HP 6 tokotujuh", url: "https://niddumulu.github.io/shope-tools/oktober1/6.html" },
-      { nama: "tokodelapan", hp: "HP 7 tokodelapan", url: "https://niddumulu.github.io/shope-tools/oktober1/7.html" }
+      { nama: "nurbadstore", hp: "HP 5 nurbadstore", url: "https://niddumulu.github.io/shope-tools/oktober1/5.html" }
     ];
 
-    // === GENERATE HTML DARI ARRAY ===
-    const list = document.getElementById("linkList");
-
-    linksData.forEach(l => {
-      const item = document.createElement("div");
-      item.className = "item";
-      item.setAttribute("data-url", l.url);
-      item.innerHTML = `
-        <div class="link-box">
-          <a class="link" href="${l.url}" target="_blank" rel="noopener noreferrer">${l.nama}</a>
-          <span class="small">${l.hp}</span>
-        </div>
-        <div class="controls">
-          <button class="openBtn">Buka</button>
-          <button class="copyBtn">Salin</button>
-        </div>
-      `;
-      list.appendChild(item);
-    });
-
-    // === FUNGSI SALIN TEKS ===
-    async function copyText(text){
-      try{
-        await navigator.clipboard.writeText(text);
-        return true;
-      }catch(e){
-        const ta = document.createElement('textarea');
-        ta.value = text;
-        ta.style.position = 'fixed';
-        ta.style.left = '-9999px';
-        document.body.appendChild(ta);
-        ta.select();
-        try{
-          document.execCommand('copy');
-          document.body.removeChild(ta);
-          return true;
-        }catch(err){
-          document.body.removeChild(ta);
-          return false;
-        }
-      }
+    // Fungsi render daftar link
+    function renderList() {
+      linkList.innerHTML = '';
+      dataLink.forEach((l, index) => {
+        const item = document.createElement('div');
+        item.className = 'item';
+        item.dataset.url = l.url;
+        item.innerHTML = `
+          <div class="link-box">
+            <a class="link" href="${l.url}" target="_blank">${l.nama}</a>
+            <span class="small">${l.hp}</span>
+          </div>
+          <div class="controls">
+            <button class="openBtn">Buka</button>
+            <button class="copyBtn">Salin</button>
+            <button class="hapusBtn" data-index="${index}">Hapus</button>
+          </div>
+        `;
+        linkList.appendChild(item);
+      });
     }
 
-    // === EVENT HANDLER ===
-    document.addEventListener('click', function(ev){
+    // Simpan ke localStorage
+    function simpanData() {
+      localStorage.setItem('dataLink', JSON.stringify(dataLink));
+    }
+
+    // Tambah link baru
+    tambahBtn.addEventListener('click', () => {
+      const nama = document.getElementById('nama').value.trim();
+      const hp = document.getElementById('hp').value.trim();
+      const url = document.getElementById('url').value.trim();
+
+      if (!nama || !hp || !url) {
+        alert('Semua kolom harus diisi!');
+        return;
+      }
+
+      dataLink.push({ nama, hp, url });
+      simpanData();
+      renderList();
+
+      // Kosongkan input
+      document.getElementById('nama').value = '';
+      document.getElementById('hp').value = '';
+      document.getElementById('url').value = '';
+    });
+
+    // Event tombol buka, salin, hapus
+    document.addEventListener('click', (ev) => {
       const t = ev.target;
 
-      if(t.classList.contains('copyBtn')){
-        const item = t.closest('.item');
-        const url = item.getAttribute('data-url');
-        copyText(url).then(ok=>{
-          t.textContent = ok ? 'Tersalin' : 'Gagal';
-          setTimeout(()=> t.textContent = 'Salin', 1200);
-        });
+      if (t.classList.contains('openBtn')) {
+        window.open(t.closest('.item').dataset.url, '_blank');
       }
 
-      if(t.classList.contains('openBtn')){
-        const item = t.closest('.item');
-        const url = item.getAttribute('data-url');
-        window.open(url, '_blank', 'noopener');
+      if (t.classList.contains('copyBtn')) {
+        navigator.clipboard.writeText(t.closest('.item').dataset.url);
+        t.textContent = 'Tersalin';
+        setTimeout(() => t.textContent = 'Salin', 1000);
       }
 
-      if(t.id === 'copyAll'){
-        const urls = Array.from(document.querySelectorAll('.item'))
-          .map(it => it.getAttribute('data-url'))
-          .join('\n');
-        copyText(urls).then(ok=>{
-          t.textContent = ok ? 'Semua Tersalin' : 'Gagal';
-          setTimeout(()=> t.textContent = 'Salin Semua', 1400);
-        });
-      }
-
-      if(t.id === 'openAll'){
-        const urls = Array.from(document.querySelectorAll('.item'))
-          .map(it => it.getAttribute('data-url'));
-        for(const u of urls){
-          window.open(u, '_blank', 'noopener');
+      if (t.classList.contains('hapusBtn')) {
+        const index = t.dataset.index;
+        if (confirm('Hapus link ini?')) {
+          dataLink.splice(index, 1);
+          simpanData();
+          renderList();
         }
       }
     });
+
+    // Tampilkan pertama kali
+    renderList();
   </script>
 </body>
 </html>
